Implemented edit/delete post

--- a/fb/static/css/main.css
+++ b/fb/static/css/main.css
@@ -99,3 +99,7 @@ body {
 	max-width: 100%; /* 100% din primul parinte cu width (.media-left) */
 	height: auto; /* scalat proportional */
 }
+
+.my-label {
+	margin-top: 10px;
+}
