--- a/fb/static/css/main.css
+++ b/fb/static/css/main.css
@@ -100,6 +100,10 @@ body {
 	height: auto; /* scalat proportional */
 }
 
+.media-body {
+     width: 100%;
+}
+
 .my-label {
 	margin-top: 10px;
 }
