Added some fixes / improvements

--- a/fb/templates/index.html
+++ b/fb/templates/index.html
@@ -22,7 +22,7 @@
   {% for post in posts %}
     <div class="media">
       <a class="media-left" href="#">
-        <img src="{{ post.author.profile.avatar_url }}">
+        <img src="{{ post.author.profile.avatar_url }}" height="70" width="70">
       </a>
       <div class="media-body">
         <h4 class="media-heading">
