--- a/fb/static/css/main.css
+++ b/fb/static/css/main.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-	max-width: 600px; /* micsoram latimea continutului */
+	max-width: 800px; /* micsoram latimea continutului */
 }
 
 .navbar-default {
@@ -43,7 +43,8 @@
    scos din document flow. 
    Pentru asta trebuie sa coboram contentul manual. */
 body {
-	padding-top: 50px;
+	padding-top: 75px;
+	padding-bottom: 75px;
 }
 
 .btn-primary {
@@ -98,4 +99,82 @@ body {
 .media-left img {
 	max-width: 100%; /* 100% din primul parinte cu width (.media-left) */
 	height: auto; /* scalat proportional */
+}
+
+.navbar-default .navbar-toggle {
+	border-color: #c03;
+	background-color: #c03;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus  {
+	background-color: #fff;
+}
+
+.navbar-fixed-bottom {
+	margin-top: 20px;
+}
+
+.block-update-card {
+  border: 1px #FFFFFF solid;
+  width: 380px;
+  float: left;
+  margin-left: 0px;
+  margin-top: 0;
+  padding: 10px;
+  box-shadow: 1px 1px 8px #d8d8d8;
+  background-color: #FFFFFF;
+}
+
+@media (max-width: 768px) {
+
+	.block-update-card {
+		width: 200px;
+	}
+}
+
+.block-update-card .h-status {
+  width: 100%;
+  height: 7px;
+  background: repeating-linear-gradient(45deg, #606dbc, #606dbc 10px, #465298 10px, #465298 20px);
+}
+.block-update-card .update-card-body {
+  margin-top: 10px;
+  margin-left: 5px;
+}
+.block-update-card .update-card-body h4 {
+  color: #737373;
+  font-weight: bold;
+  font-size: 13px;
+}
+.block-update-card .update-card-body p {
+  color: #737373;
+  font-size: 12px;
+}
+.block-update-card .card-bottom-status {
+  color: #a9a9aa;
+  font-weight: bold;
+  font-size: 14px;
+  border-top: #e0e0e0 1px solid;
+  padding-top: 5px;
+  margin: 0px;
+}
+.block-update-card .card-bottom-status:hover {
+  background-color: #dd4b39;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.createGift .form-horizontal {
+	margin-left: 15px;
+}
+
+.createGift .form-horizontal .btn-primary {
+	width: 75px;
+	margin-left: -30px;
+}
+
+@media (max-width: 768px) {
+	.createGift .form-control {
+		width: 250px;
+	}
 }
