--- a/fb/templates/layout.html
+++ b/fb/templates/layout.html
@@ -5,6 +5,8 @@
     <title>My facebook app</title>
     <link rel="stylesheet" href="{% static 'css\bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css\main.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   </head>
   <body>
 
@@ -14,14 +16,19 @@
           <a class="navbar-brand" href="{% url 'index' %}">
             <img src="{% static 'img/logo-fb.svg' %}">
           </a>
+          <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav pull-right">
+        <div class="collapse navbar-collapse navHeaderCollapse">
+          <ul class="nav navbar-nav navbar-right">
             <li><a href="{% url 'index' %}">News</a></li>
-          {% if user.is_authenticated %}
-            <li><a href="{% url 'profile' user.username %}">My profile</a></li>
+            {% if user.is_authenticated %}
+              <li><a href="{% url 'profile' user.username %}">My profile</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
-          {% endif %}
+            {% endif %}
           </ul>
         </div>
       </div>
@@ -31,6 +38,30 @@
       {% block content %}
       {% endblock %}
     </div>
+
+    <footer>
+    <div class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#footer-body">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse" id="footer-body">
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="{% url 'index' %}">News</a></li>
+                  {% if user.is_authenticated %}
+                    <li><a href="{% url 'profile' user.username %}">My profile</a></li>
+                  <li><a href="{% url 'logout' %}">Log Out</a></li>
+                  {% endif %}
+                </ul>
+            </div>
+        </div>
+    </div>
+  </footer>
+
 
     <!-- scripts -->
     <script src="{% static 'js\jquery-1.11.1.min.js' %}"></script>
