--- a/fb/templates/send_gift.html
+++ b/fb/templates/send_gift.html
@@ -2,11 +2,28 @@
 
 {% block content %}
 
+	<a href="{% url 'profile' user %}">back</a> <br>
+	
 	<h3> Create a gift </h3>
-	<form enctype="multipart/form-data" method="POST">
+
+	<div class="createGift">
+		<form class="form-horizontal" method="POST" enctype="multipart/form-data">
 	    {% csrf_token %}
-	    {{ form.as_table }}
-	    <button type="submit">Send</button>
-	</form>
+	    <div class="form-group">
+	      {{ form.message }}
+	    </div>
+	    <div class="form-group">
+		   <label for="Snapshot">Take a snap</label>
+		   {{ form.snapshot }}
+		</div>
+	    <div>
+	    	<div class="col-xs-4">
+		    	<button class="btn btn-primary btn-block" type="submit">
+		     		Send
+		        </button>
+		    </div>
+	    </div>
+	   	</form>
+	</div>
 
 {% endblock %}
