--- a/fb/templates/user_gifts.html
+++ b/fb/templates/user_gifts.html
@@ -1,6 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+
+<a href="{% url 'profile' user %}">back</a> <br>
+
   <div class="row">
     <div class="col-xs-6">
       <h3>Sent gifts</h3>
