--- a/fb/templates/user_gifts.html
+++ b/fb/templates/user_gifts.html
@@ -11,7 +11,7 @@
         {% for x in profile.user.sent_gifts.all %}
           <div class="media">
             <a class="media-left" href="#">
-              <img src="{{ x.snapshot_url }}">
+              <img src="{{ x.snapshot_url }}" height="70" width="70">
             </a>
             <div class="media-body">
               <p class="media-heading">
